some basic alignment and color scheme fixes

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,13 @@
 $primary: #9DBBF8;
+$secondary: #2C6BED;
+$tertiary: #ECECEC;
+
+$background-color1: $primary;
+$background-color2: $tertiary;
+
+$hero-body-padding-tablet: 3rem 1.5rem;
+
+$gap: 32px;
+$navbar-breakpoint: 640px + (2 * $gap);
+$navbar-padding-vertical: 0;
+$navbar-padding-horizontal: 1.5rem;
